--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -8,9 +8,9 @@
 
 <div class="empty-pic ">
 
-    <div class="container about">
+    <div class="container">
 
-        <div class="overlay">
+        <div class="overlay ">
             <div class="col p-4">
 
                 <h1 class="aw text-wht text-center">{% trans "Change Password" %}</h1>
