--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -21,27 +21,27 @@
             </div>
         </div>
     </div>
-    <div class="container about">
+    <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
 
-                <h1 class="aw text-wht text-center">{% trans "Password Reset" %}</h1>
+                <h1 class="aw text-ylw text-center">{% trans "Password Reset" %}</h1>
                 {% if user.is_authenticated %}
                 {% include "account/snippets/already_logged_in.html" %}
                 {% endif %}
 
-                <p class="aw text-wht">
+                <p class="text-wht">
                     {% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
                 </p>
 
                 <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset aw text-wht">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <input class="aw text-wht btn btn-success w-100" type="submit"
+                    <input class="aw text-wht btn btn-warning w-100" type="submit"
                         value="{% trans 'Reset My Password' %}" />
                 </form>
 
-                <p class="aw text-wht">{% blocktrans %}Please contact us if you have any trouble resetting your
+                <p class="text-wht text-center">{% blocktrans %}Please contact us if you have any trouble resetting your
                     password.{% endblocktrans %}
                 </p>
             </div>
