--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -6,16 +6,16 @@
 {% block content %}
 
 <div class="empty-pic ">
-    <div class="container about">
-        <div class="overlay">
-            <div class="col p-4">
+    <div class="container center-block">
+        <div class="overlay ">
+            <div class="col p-4 ">
 
-                <h1 class="aw text-wht">
+                <h1 class="aw text-wht text-center">
                     {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
                 {% if token_fail %}
                 {% url 'account_reset_password' as passwd_reset_url %}
-                <p class="aw text-wht">{% blocktrans %}The password reset link was invalid, possibly because it has
+                <p class="text-wht">{% blocktrans %}The password reset link was invalid, possibly because it has
                     already been used.
                     Please request a <a class="text-wht" href="{{ passwd_reset_url }}">new password
                         reset</a>.{% endblocktrans %}</p>
@@ -24,7 +24,7 @@
                 <form class="aw text-wht" method="POST" action="{{ action_url }}">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <input class="aw text-wht btn btn-warning" type="submit" name="action"
+                    <input class="aw text-wht btn btn-warning w-100" type="submit" name="action"
                         value="{% trans 'Change Password' %}" />
                 </form>
                 {% else %}
