--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="empty-pic ">
-    <div class="container about">
+    <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
 
