--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -10,17 +10,18 @@
 
 
 <div class="empty-pic ">
-    <div class="container about">
+    <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
 
-                <h1 class="aw text-wht text-center">{% trans "Password Reset" %}</h1>
+                <h1 class="aw text-grn text-center">{% trans "Password Reset" %}</h1>
 
                 {% if user.is_authenticated %}
                 {% include "account/snippets/already_logged_in.html" %}
                 {% endif %}
 
-                <p class="aw text-wht">{% blocktrans %}We have sent you an e-mail. Please contact us if you do not
+                <p class="text-wht text-center">{% blocktrans %}We have sent you an e-mail. Please contact us if you do
+                    not
                     receive it within a few
                     minutes.{% endblocktrans %}</p>
 
