--- a/templates/blog/blog_form.html
+++ b/templates/blog/blog_form.html
@@ -16,7 +16,7 @@
 <!--If a user trys to edit or created a post with out being authenticated-->
 {% else %}
 <div id="about-pic">
-    <div class="container about">
+    <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
                 <h1 class="text-wht aw text-center">Please Login</h1>
