--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -1,93 +1,86 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid bg-black fixed-top crumbs">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'blog:list' %}">Blogs</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">Blog</strong>
-        </div>
-    </div>
-</div>
 
-<div class="container">
-    <div class="row mx-auto">
-        <!-- Post Content Column -->
-        <div class="col-lg-12">
+<div class="blog-pic">
+    <div class="container center-block">
+        <div class="row mx-auto bg-black-a text-wht">
+            <!-- Post Content Column -->
+            <div class="col-lg-12">
 
-            <!-- Title -->
-            <h1 class="mt-4 aw"> {{ blog.title|title }}</h1>
+                <!-- Title -->
+                <h1 class="mt-4 aw"> {{ blog.title|title }}</h1>
 
-            <!-- Author -->
-            <p class="lead">
-                by: {{ blog.author|title }}
+                <!-- Author -->
+                <p class="lead">
+                    by: {{ blog.author|title }}
 
-                {% if  user.is_authenticated and user == blog.author %}
-                <span><a class="font-small ml-3 mb-0 text-grn" href="{{ blog.get_update_url }}"> (Edit)</a></span>
-                <span class="font-small mb-0 text-bk">/</span>
-                <span><a class="font-small mb-0 text-red" href="{{ blog.get_delete_url }}"> (Delete)</a></span>
+                    {% if  user.is_authenticated and user == blog.author %}
+                    <span><a class="font-small ml-3 mb-0 text-grn" href="{{ blog.get_update_url }}"> (Edit)</a></span>
+                    <span class="font-small mb-0 text-bk">/</span>
+                    <span><a class="font-small mb-0 text-red" href="{{ blog.get_delete_url }}"> (Delete)</a></span>
 
+                    {% endif %}
+                </p>
+
+                <hr>
+
+                <!-- Date/Time -->
+                <span><i class=" px-2 fad fa-comments-alt"></i> {{ blog.get_comment_count }}</span>
+                <span><i class="px-2 fad fa-eye"></i> {{ blog.get_view_count }}</span>
+                <span><i class="px-2 fad fa-thumbs-up"></i> {{ blog.get_like_count }}</span>
+                <span class="text-mute float-right">Posted: {{ blog.publish_date|timesince }}</span>
+
+
+                <hr>
+
+                <!-- Preview Image -->
+                <img class="img-fluid mx-auto rounded" src="{{ blog.thumbnail.url }}" alt="">
+
+                <hr>
+
+                <!-- Post Content -->
+                <p class="text-off-wht mx-auto">{{ blog.content|safe }}</p>
+                <hr>
+                <p class="">If you like the Post, give it a
+                    <a class="text-muted" href="{{ blog.get_like_url }}">
+                        <i class="pl-2 fad fa-thumbs-up fa-lg"></i>
+                        {{ blog.get_like_count }}
+                    </a>
+
+                </p>
+                <hr>
+                <small class="text-muted">First Posted on the {{ blog.publish_date}}</small>
+                <hr>
+                <!-- Comments Form -->
+
+                {% if request.user.is_authenticated %}
+                <div class=" card my-4">
+                    <h5 class="card-header">Leave a Comment:</h5>
+                    <div class="card-body">
+                        <form method="POST">
+                            {% csrf_token %}
+                            {{ form|crispy }}
+                            <button type="submit" class="btn btn-primary">Comment</button>
+                        </form>
+                    </div>
+                </div>
+                {% else %}
+                <a href="{% url 'account_login' %}" class=" mb-4 btn btn-warning">Login to Comment</a>
                 {% endif %}
-            </p>
-
-            <hr>
-
-            <!-- Date/Time -->
-            <span><i class=" px-2 fad fa-comments-alt"></i> {{ blog.get_comment_count }}</span>
-            <span><i class="px-2 fad fa-eye"></i> {{ blog.get_view_count }}</span>
-            <span><i class="px-2 fad fa-thumbs-up"></i> {{ blog.get_like_count }}</span>
-            <span class="text-mute float-right">Posted: {{ blog.publish_date|timesince }}</span>
-
-
-            <hr>
-
-            <!-- Preview Image -->
-            <img class="img-fluid mx-auto rounded" src="{{ blog.thumbnail.url }}" alt="">
-
-            <hr>
-
-            <!-- Post Content -->
-            <p class="lead">{{ blog.content|safe }}</p>
-            <hr>
-            <p class="">If you like the Post, give it a
-                <a class="text-muted" href="{{ blog.get_like_url }}">
-                    <i class="pl-2 fad fa-thumbs-up fa-lg"></i>
-                    {{ blog.get_like_count }}
-                </a>
-
-            </p>
-            <hr>
-            <small class="text-muted">First Posted on the {{ blog.publish_date}}</small>
-            <hr>
-            <!-- Comments Form -->
-
-            {% if request.user.is_authenticated %}
-            <div class=" card my-4">
-                <h5 class="card-header">Leave a Comment:</h5>
-                <div class="card-body">
-                    <form method="POST">
-                        {% csrf_token %}
-                        {{ form|crispy }}
-                        <button type="submit" class="btn btn-primary">Comment</button>
-                    </form>
+                <!-- Single Comment -->
+                {% for blogcomment in blog.blogcomments %}
+                <div class=" media mb-4">
+                    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+                    <div class="media-body">
+                        <h5 class="mt-0">{{ blogcomment.user|title }}</h5>
+                        <p>{{ blogcomment.content}}</p>
+                        <small>{{ blogcomment.timestamp|timesince }} ago</small>
+                    </div>
                 </div>
+                <hr>
+                {% endfor %}
             </div>
-            {% else %}
-            <a href="{% url 'account_login' %}" class=" mb-4 btn btn-warning">Login to Comment</a>
-            {% endif %}
-            <!-- Single Comment -->
-            {% for blogcomment in blog.blogcomments %}
-            <div class=" media mb-4">
-                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                <div class="media-body">
-                    <h5 class="mt-0">{{ blogcomment.user|title }}</h5>
-                    <p>{{ blogcomment.content}}</p>
-                    <small>{{ blogcomment.timestamp|timesince }} ago</small>
-                </div>
-            </div>
-            <hr>
-            {% endfor %}
         </div>
     </div>
 </div>
