--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-    <div class="container about">
+    <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
                 <p class="text-wht aw display-3 text-center">Focus Fitness</p>
