--- a/templates/products/products_detail.html
+++ b/templates/products/products_detail.html
@@ -93,7 +93,7 @@
 
                             <div class="col{% if s %}-12 mt-1{% endif %}">
                                 <button type="submit"
-                                    class="ripple-surface font-weight-bold aw text-wht py-4 px-4 btn btn-outline-black text-uppercase rounded-10 mt-5 bg-primary border-bk">
+                                    class="  font-weight-bold aw text-wht py-4 px-4 btn btn-outline-black text-uppercase rounded-10 mt-5 bg-primary border-bk">
                                     Add To cart <i class="fad fa-cart-plus"></i>
                                 </button>
 
