--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,13 @@ img {
 
 }
 
+.center-block-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .alpha-overlay {
   position: relative;
   height: fit-content;
@@ -210,38 +217,6 @@ img {
 
 
 
-/*RIPPLE EFFECT*/
-
-.ripple-surface {
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-}
-
-.ripple-surface span {
-  position: absolute;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.685);
-  width: 100px;
-  height: 100px;
-  margin-top: -50px;
-  margin-left: -50px;
-  animation: ripple 700ms;
-  opacity: 0;
-  -webkit-animation: ripple 700ms;
-}
-
-@keyframes ripple {
-  from {
-    opacity: 1;
-    transform: scale(0);
-  }
-
-  to {
-    opacity: 0;
-    transform: scale(10);
-  }
-}
 
 #cart {
   position: fixed;
