--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -6,6 +6,20 @@
 
 <!-- Page Content -->
 <div class="blog-pic">
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-12 mb-0">
+                <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+                <span class="mx-2 mb-0 text-wht">/</span>
+                {% if user.is_authenticated %}
+                <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create</a>
+                <span class="mx-2 mb-0 text-wht">/</span>
+                {% endif %}
+
+                <small class="text-wht aw">Blogs</small>
+            </div>
+        </div>
+    </div>
     <div class="row mx-4">
         <!-- Blog Entries Column -->
         <div class="col-md-8">
