--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -18,35 +18,35 @@
             <div class="row d-flex justify-content-center">
                 <div class=" col-12 d-flex d-flex justify-content-center no-gutters">
                     {% if current_membership == False %}
-                    <a class="ripple-surface hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
+                    <a class="  hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'account_signup' %}" role="button">Join Up</a>
                     {% endif %}
 
                     {% if current_membership == "Free" %}
-                    <a class="ripple-surface hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
+                    <a class="  hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'memberships:select-membership' %}" role="button">Subcribe</a>
                     {% endif %}
 
                     {% if current_membership == "Professional" %}
-                    <a class="ripple-surface hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
+                    <a class="  hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'programs:list' %}" role="button">Programs</a>
                     {% endif %}
                 </div>
                 <div class=" col-6 d-flex d-flex justify-content-center no-gutters">
-                    <a class="ripple-surface hero-btn btn btn-primary btn-lg aw text-wht m-1 border border-white"
+                    <a class="  hero-btn btn btn-primary btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'products' %}" role="button">Shop
                     </a>
                 </div>
                 <div class=" col-6 d-flex d-flex justify-content-center no-gutters">
-                    <a class="ripple-surface hero-btn btn btn-warning btn-lg aw text-wht m-1 border border-white"
+                    <a class="  hero-btn btn btn-warning btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'blog:list' %}" role="button">Blog</a>
                 </div>
                 <div class="mb-2 col-12 d-flex d-flex justify-content-center no-gutters">
                     {% if request.user.is_authenticated %}
-                    <a class="ripple-surface hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
+                    <a class="  hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'account_logout' %}" role="button">Logout</a>
                     {% else %}
-                    <a class="ripple-surface hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
+                    <a class="  hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'account_login' %}" role="button">Login</a>
                     {% endif %}
                 </div>
@@ -57,7 +57,7 @@
 <!--Floating Block-->
 
 
-</div>
+
 
 <section id="section2">
     <div class="feature-container card-group">
@@ -114,7 +114,7 @@
                         Just click the Button below to Join.</p>
 
                     <div class="text-center">
-                        <a class="ripple-surface w-50 hero-btn btn btn-success btn-lg aw text-wht border border-secondary bs-2"
+                        <a class="  w-50 hero-btn btn btn-success btn-lg aw text-wht border border-secondary bs-2"
                             href="" role="button">Join Up</a>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
     <div class="blog-image">
         <div class="container">
             <h2 class="aw active-size text-center text-wht mt-5 pt-4 pb-4">Feature Blogs</h2>
-            <div class="row ">
+            <div class="row center-block">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner text-wht">
                         {% for blog in feature_blog %}
@@ -206,37 +206,37 @@
         </div>
         <div class="spaces-2"></div>
     </div>
+</section>
+{% endblock content %}
 
-    {% endblock content %}
+{% block postload_js %}
+{{ block.super }}
 
-    {% block postload_js %}
-    {{ block.super }}
+{% endblock postload_js %}
 
-    {% endblock postload_js %}
+<div class="row ">
+    {% for blog in feature_blog %}
+    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <div class="card w-100 h-100 border-1 ">
+            <a class="mx-auto" href="{{ blog.get_absolute_url }}">
+                <img class="mx-auto card-img-top  img-fluid" src="{{ blog.thumbnail.url }}"
+                    alt="{{ blog.title|title }}">
+            </a>
+            <div class="card-body pb-0">
+                <p class="aw text-center">{{ blog.title|title }}</p>
+                <a href="{{ blog.get_absolute_url }}"><small class="text-muted">{{ blog.category }}</small></a>
+            </div>
+            <div class="card-footer bg-white pt-0 border-0 rounded-10 text-center">
+                <div class="row ">
+                    <div class="col">
+                        <p class=" mb-0  aw">{{ blog.content|safe|truncatechars:100 }}</p>
 
-    <div class="row ">
-        {% for blog in feature_blog %}
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-            <div class="card w-100 h-100 border-1 ">
-                <a class="mx-auto" href="{{ blog.get_absolute_url }}">
-                    <img class="mx-auto card-img-top  img-fluid" src="{{ blog.thumbnail.url }}"
-                        alt="{{ blog.title|title }}">
-                </a>
-                <div class="card-body pb-0">
-                    <p class="aw text-center">{{ blog.title|title }}</p>
-                    <a href="{{ blog.get_absolute_url }}"><small class="text-muted">{{ blog.category }}</small></a>
-                </div>
-                <div class="card-footer bg-white pt-0 border-0 rounded-10 text-center">
-                    <div class="row ">
-                        <div class="col">
-                            <p class=" mb-0  aw">{{ blog.content|safe|truncatechars:100 }}</p>
-
-                            <i class="fad fa-star mr-1"></i>
-                            <small class="text-muted">{{ items.rating }}</small>
-                        </div>
+                        <i class="fad fa-star mr-1"></i>
+                        <small class="text-muted">{{ items.rating }}</small>
                     </div>
                 </div>
             </div>
         </div>
-        {% endfor %}
     </div>
+    {% endfor %}
+</div>
