--- a/templates/profiles/profile_details.html
+++ b/templates/profiles/profile_details.html
@@ -28,7 +28,7 @@
                             {% csrf_token %}
                             {{ form|crispy }}
                             <button type="submit"
-                                class="ripple-surface dark-btn uppercase col-12 aw rounded-10 px-4 py-2">Update
+                                class="  dark-btn uppercase col-12 aw rounded-10 px-4 py-2">Update
                                 Shipping Details</button>
                         </form>
                     </div>
