--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -19,7 +19,7 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button class="aw btn-danger col rounded-10 p-2" type="submit">{% trans 'Sign Out' %}<i
+          <button class=" light-shadow aw btn-danger col rounded-10 p-2" type="submit">{% trans 'Sign Out' %}<i
               class="pl-3 fad fa-sign-out"></i></button>
         </form>
 
