--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,17 @@ img {
   max-width: 40rem;
 }
 
+.hover-shadow:hover {
+  -webkit-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.bg-wht {
+  background-color: rgba(255, 255, 255, 0.555);
+}
+
 .display-4 {
   font-size: 3.0rem;
 }
