--- a/templates/products/products_detail.html
+++ b/templates/products/products_detail.html
@@ -2,20 +2,21 @@
 {% load static %}
 {% block content %}
 
-<div class="container-fluid product-overlay">
+<div class="blog-pic">
 
-    <div class="container">
+    <div class="container ">
+        <!-- BreadCrumbs -->
         <div class="container ">
             <div class="row">
                 <div class="col-md-12 mb-0">
-                    <a class="text-bk aw pl-2" href="{% url 'products' %}">Shop</a>
-                    <span class="mx-2 mb-0 text-bk">/</span>
-                    <small class="text-bk aw">Product</small>
+                    <a class="text-wht aw pl-2" href="{% url 'products' %}">Shop</a>
+                    <span class="mx-2 mb-0 text-wht">/</span>
+                    <small class="text-wht aw">Product</small>
                 </div>
             </div>
         </div>
-        <div class="row ">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-2 bg-white rounded-left">
                 <div class="image-container my-5">
                     {% if product.image %}
                     <a class="mx-auto  " href="{{ product.image.url }}" target="_blank">
@@ -30,7 +31,7 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 col-lg-4 bg-white rounded-right">
                 <div class="product-details-container mb-5 mt-md-5">
                     <h5 class="aw text-center mb-2">{{ product.name }}</h5>
                     <hr>
@@ -79,7 +80,7 @@
                                         <input class=" form-control qty_input border border-secondary " type="number"
                                             name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}"
                                             id="id_qty_{{ product.id }}">
-                                        <div class="input-group-append">
+                                        <div class="input-group-append ">
                                             <button class="increment-qty btn btn-black add-block rounded-10"
                                                 data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                 <span class="icon">
@@ -93,16 +94,16 @@
 
                             <div class="col{% if s %}-12 mt-1{% endif %}">
                                 <button type="submit"
-                                    class="  font-weight-bold aw text-wht py-4 px-4 btn btn-outline-black text-uppercase rounded-10 mt-5 bg-primary border-bk">
-                                    Add To cart <i class="fad fa-cart-plus"></i>
+                                    class="hover-shadow font-weight-bold aw text-wht py-4 px-3 btn btn-outline-black text-uppercase rounded-10 mt-5 bg-primary border-bk">
+                                    Add To cart <i class="pl-2 fad fa-cart-plus"></i>
                                 </button>
 
                                 <a href="{% url 'products' %}"
-                                    class=" p-2 btn btn-outline-black rounded-10 mt-5 bg-warning border-bk ">
-                                    <span class="icon">
-                                        <i class="fad fa-store"></i>
-                                    </span>
-                                    <span class="aw bg-warning text-uppercase">Keep Shopping</span>
+                                    class="hover-shadow aw p-2 btn btn-outline-black rounded-10 mt-5 bg-warning border-bk ">
+                                    <i class="pr-3 fad fa-store"></i>Keep
+                                    Shopping
+
+
                                 </a>
 
 
