--- a/templates/products/products_detail.html
+++ b/templates/products/products_detail.html
@@ -30,33 +30,44 @@
                     </a>
                     {% endif %}
                 </div>
+
+                <div class="col-12 ">
+                    <h4 class="aw">Overview</h4>
+                    <p class="detail-p">{{ product.description|safe }}</p>
+                </div>
+
             </div>
-            <div class="col-12 col-md-6 col-lg-4 bg-white rounded-right">
+            <div class=" col-12 col-md-6 col-lg-4 bg-white rounded-right">
                 <div class="product-details-container mb-5 mt-md-5">
                     <h5 class="aw text-center mb-2">{{ product.name }}</h5>
                     <hr>
-                    <p class="aw lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                    {% if product.category %}
-                    <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                            <i class="fad fa-tags"></i>&nbsp;{{ product.category.friendly_name }}
-                        </a>
-                    </p>
-                    {% endif %}
-                    {% if product.rating %}
-                    <small class="text-muted"><i class="fad fa-star fa-lg mr-1"></i>{{ product.rating }} / 5</small>
-                    {% else %}
-                    <small class="text-muted">No Rating</small>
-                    {% endif %}
+                    <p class="aw lead mb-0 text-center font-weight-bold">${{ product.price }}</p>
+
+                    <div class="row justify-content-around">
+                        {% if product.category %}
+                        <span class="mt-1 mb-0">
+                            <a class="" href="{% url 'products' %}?category={{ product.category.name }}">
+                                <i class="fad fa-tags"></i>&nbsp;{{ product.category.friendly_name }}
+                            </a>
+                        </span>
+                        {% endif %}
+
+                        {% if product.rating %}
+                        <span class="text-bk float-right"><i class="fad fa-star fa-lg mr-1"></i>{{ product.rating }} /
+                            5</span>
+                        {% else %}
+                        <small class="">No Rating</small>
+                        {% endif %}
+                    </div>
 
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             {% with product.has_sizes as s %}
                             {% if s %}
-                            <div class="col-12 mt-2">
-                                <p class="aw"><strong>Size:</strong></p>
-                                <select class="form-control rounded-2 w-75" name="product_size" id='id_product_size'>
+                            <div class="d-flex justify-content-center col-12 mt-3">
+                                <p class="aw mr-2 ">Size:</p>
+                                <select class="form-control rounded-10 w-50" name="product_size" id='id_product_size'>
                                     <option class="aw" value="xs">XS</option>
                                     <option class="aw" value="s"> S</option>
                                     <option class="aw" value="m" selected> M</option>
@@ -66,8 +77,8 @@
                             </div>
                             {% endif %}
                             <div class="col-12 mx-auto">
-                                <p class="mt-3 aw"><strong>Quantity:</strong></p>
-                                <div class="form-group w-75 aw">
+                                <p class="mt-3 aw text-center">Quantity:</p>
+                                <div class="form-group mx-auto w-75 aw">
                                     <div class="input-group ">
                                         <div class=" input-group-prepend">
                                             <button class=" decrement-qty btn btn-black minus-block rounded-10"
@@ -92,23 +103,19 @@
                                 </div>
                             </div>
 
-                            <div class="col{% if s %}-12 mt-1{% endif %}">
-                                <button type="submit"
-                                    class="hover-shadow font-weight-bold aw text-wht py-4 px-3 btn btn-outline-black text-uppercase rounded-10 mt-5 bg-primary border-bk">
-                                    Add To cart <i class="pl-2 fad fa-cart-plus"></i>
-                                </button>
-
-                                <a href="{% url 'products' %}"
-                                    class="hover-shadow aw p-2 btn btn-outline-black rounded-10 mt-5 bg-warning border-bk ">
-                                    <i class="pr-3 fad fa-store"></i>Keep
-                                    Shopping
-
-
-                                </a>
-
-
-
-
+                            <div class="row justify-content-around align-content-center">
+                                <div class="mx-1">
+                                    <button type="submit"
+                                        class="hover-shadow font-weight-bold aw text-wht py-4 px-3 btn btn-outline-black text-uppercase rounded-10 mt-5 bg-primary border-bk">
+                                        Add To cart <i class="pl-2 fad fa-cart-plus"></i>
+                                    </button>
+                                </div>
+                                <div class="mx-1">
+                                    <a href="{% url 'products' %}"
+                                        class="hover-shadow aw px-2 py-4 btn btn-outline-black rounded-10 mt-5 bg-warning border-bk ">
+                                        <i class="pr-3 fad fa-store"></i>Keep Shopping
+                                    </a>
+                                </div>
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
@@ -116,7 +123,7 @@
                     </form>
                 </div>
             </div>
-            <p class="col-12 mt-3  mx-auto detail-p">{{ product.description }}</p>
+            <!-- <p class="col-12 mt-3  mx-auto detail-p">{{ product.description }}</p> -->
         </div>
     </div>
 
