added form to html and logic but not working yet

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -483,6 +483,10 @@ nav {
   max-width: 620px;
 }
 
+.blog-list-img {
+  max-width: 20rem;
+}
+
 .carosel-img {
   min-width: 25rem;
   max-width: 25rem;
