--- a/templates/base_partials/_mini_cart.html
+++ b/templates/base_partials/_mini_cart.html
@@ -9,7 +9,7 @@
 
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_staff %}
-                <a href="">
+                <a href="/admin/">
                     <span class="aw text-wht">
                         <i class="fad fa-user-cog"></i>
                         Admin Login
