--- a/templates/blog/blog_confirm_delete.html
+++ b/templates/blog/blog_confirm_delete.html
@@ -3,17 +3,9 @@
 
 
 {% block content %}
-<div class="container-fluid bg-black">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">About</strong>
-        </div>
-    </div>
-</div>
+
 <div id="about-pic">
-    <div class="container about">
+    <div class="container center-block">
         <div class="overlay border border-white ">
             <div class="col p-4">
                 <p class="text-red aw display-3 text-center">Delete Blog </p>
@@ -23,14 +15,14 @@
                     {{ object.title|title }} ? </h4>
                 <form class="" action="" method="POST">
                     {% csrf_token %}
-                    <button class="mt-3 w-100 text-bk aw btn btn-danger border border-dark" type="submit">Yes. Delete
+                    <button class="mt-3 w-100 text-bk aw btn btn-danger border border-dark" type="submit"><i
+                            class="mr-3 text-grn fas fa-check fa-lg"></i>Yes. Delete
                         this post
                         Post</button>
                 </form>
                 <span><a href="{{ object.get_absolute_url }}"
-                        class="aw text-wht mt-3 w-100 btn btn-success text-bk border border-white">No.
-                        Take me
-                        back to blogs </a></span>
+                        class="aw text-wht mt-3 w-100 btn btn-success text-bk border border-white">
+                        <i class="mr-3 text-red  fas fa-times-circle fa-lg"></i>No. Take me back to blogs </a></span>
             </div>
         </div>
     </div>
